--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
+  timeago: ^3.7.0
+  cached_network_image: ^3.4.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
