--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   timeago: ^3.7.0
   cached_network_image: ^3.4.1
   http: ^1.3.0
+  injectable: ^2.5.0
+  get_it: 
+  dio: ^5.8.0+1
+  connectivity_plus: ^6.1.3
+  dartz: ^0.10.1
+  either_dart: ^1.0.0
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +56,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  # add the generator to your dev_dependencies  
+  injectable_generator:  
+  # add build runner if not already added  
+  build_runner:
+  flutter_gen:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
