--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   dartz: ^0.10.1
   either_dart: ^1.0.0
   flutter_bloc: ^9.0.0
+  url_launcher: ^6.3.1
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
