--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   url_launcher: ^6.3.1
   lottie: ^3.3.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
