--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   url_launcher: ^6.3.1
   lottie: ^3.3.1
   shimmer: ^3.0.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
