--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   lottie: ^3.3.1
   shimmer: ^3.0.0
   shared_preferences: ^2.5.2
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
