--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   shimmer: ^3.0.0
   shared_preferences: ^2.5.2
   animated_splash_screen: ^1.3.0
+  flutter_launcher_icons: ^0.14.3
+
+
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +69,11 @@ dev_dependencies:
   # add build runner if not already added  
   build_runner:
   flutter_gen:
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
