--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.5.2
   animated_splash_screen: ^1.3.0
   flutter_launcher_icons: ^0.14.3
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
